fix: scroll behaviour on popup (+ sub button on mobile)

--- a/css/popup.css
+++ b/css/popup.css
@@ -1,3 +1,8 @@
+.no-scroll {
+	height: 100%;
+	overflow: hidden;
+}
+
 .popup-visible {
 	display: block !important;
 }
